Fix div id name and forgot close tag

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="./assets/flog.jpg"
+    <link rel="icon" href="./assets/flog.jpg">
     <title>jon</title>
 </head>
 <body>
-    <div id="main"></div>
+    <div id="elm"></div>
 </body>
 </html>
